--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -87,4 +87,14 @@
       sidebar = sidebar)
 }
 
-@hmrcGovUkTemplate(Some(title), bodyClasses)(head, bodyEnd, insideHeader, afterHeader, footerTop, Some(uiLayouts.footer_links(None, None, if(appConfig.accessibilityReportEnabled) {Some(appConfig.accessibilityReportUrl)} else{None})), nav = true)(content)
+@hmrcGovUkTemplate(Some(title), bodyClasses)(
+    head,
+    bodyEnd,
+    insideHeader,
+    afterHeader,
+    footerTop,
+    Some(uiLayouts.footer_links(
+        None,
+        None,
+        if(appConfig.accessibilityReportEnabled) Some(appConfig.accessibilityReportUrl) else None)),
+    nav = true)(content)
