--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -96,5 +96,5 @@
     Some(uiLayouts.footer_links(
         None,
         None,
-        if(appConfig.accessibilityReportEnabled) Some(appConfig.accessibilityReportUrl) else None)),
+        if(appConfig.features.accessibilityReportFeature()) Some(appConfig.accessibilityReportUrl) else None)),
     nav = true)(content)
