BTAT-6651 added input package

--- a/app/testOnly/views/featureSwitch.scala.html
+++ b/app/testOnly/views/featureSwitch.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import config.ConfigKeys
+@import common.ConfigKeys
 @import helper.CSRF
 @import testOnly.models._
 @import testOnly.forms.FeatureSwitchForm
