BTAT-6654 removed unused inputs

--- a/app/testOnly/views/featureSwitch.scala.html
+++ b/app/testOnly/views/featureSwitch.scala.html
@@ -31,7 +31,7 @@
             padding: 25px;">
             <fieldset>
                 <legend>
-                    <p class="bold-medium" style="margin-bottom: 10px;">Manage VAT Subscription Frontend Features</p>
+                    <p class="bold-medium" style="margin-bottom: 10px;">VAT Return Period Frontend Features</p>
                 </legend>
                 @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.accessibilityReportFeature), "Accessibility Link In Footer")
             </fieldset>
