--- a/app/views/errors/unauthorised_agent.scala.html
+++ b/app/views/errors/unauthorised_agent.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import models.User
+@import models.auth.User
 
 @()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig, user: Option[User[_]] = None)
 
