--- a/app/testOnly/views/featureSwitch.scala.html
+++ b/app/testOnly/views/featureSwitch.scala.html
@@ -34,6 +34,7 @@
                     <p class="bold-medium" style="margin-bottom: 10px;">VAT Return Period Frontend Features</p>
                 </legend>
                 @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.accessibilityReportFeature), "Accessibility Link In Footer")
+                @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.stubContactPreferencesFeature), "Stub Contact Preferences")
             </fieldset>
         </div>
 
