--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -18,6 +18,7 @@
 @import layouts.{govuk_template => hmrcGovUkTemplate}
 @import uk.gov.hmrc.play.views.html.{layouts => uiLayouts}
 @import uk.gov.hmrc.play.views.html.{helpers => uiHelpers}
+@import models.auth.User
 
 @(appConfig: AppConfig,
   title: String,
@@ -28,7 +29,8 @@
   contentHeader: Option[Html] = None,
   mainContent: Html = HtmlFormat.empty,
   serviceInfoContent: Html = HtmlFormat.empty,
-  scriptElem: Option[Html] = None)(implicit request: Request[_], messages: Messages)
+  scriptElem: Option[Html] = None,
+  user: Option[User[_]] = None)(implicit request: Request[_], messages: Messages)
 
 @linkElem = {
   <link rel="stylesheet" type="text/css" href='@routes.Assets.at("palette.css")'>
@@ -44,9 +46,13 @@
 
 @headerNavLinks = {}
 
+@dynamicNavTitle = @{
+  user.fold(messages("navTitle.vat"))(u => if(u.isAgent) messages("navTitle.agent") else messages("navTitle.nonAgent"))
+}
+
 @insideHeader = {
     @uiLayouts.header_nav(
-      navTitle = Some(messages("common.service-name")),
+      navTitle = Some(dynamicNavTitle),
       navTitleLink = None,
       showBetaLink = false,
       navLinks = Some(headerNavLinks))
