--- a/app/views/main_template.scala.html
+++ b/app/views/main_template.scala.html
@@ -15,6 +15,7 @@
  *@
 
  @import config.AppConfig
+ @import models.auth.User
 
  @(title: String,
         appConfig: AppConfig,
@@ -22,7 +23,8 @@
         contentHeader: Option[Html] = None,
         bodyClasses: Option[String] = None,
         mainClass: Option[String] = None,
-        scriptElem: Option[Html] = None)(mainContent: Html)(implicit request: Request[_], messages: Messages)
+        scriptElem: Option[Html] = None,
+        user: Option[User[_]] = None)(mainContent: Html)(implicit request: Request[_], messages: Messages)
 
  @import uk.gov.hmrc.play.views.html.layouts
 
@@ -35,14 +37,17 @@
   }
 }
 
+ @titleServiceName = {@{user.fold(messages("navTitle.vat"))(u => if(u.isAgent) messages("navTitle.agent") else messages("navTitle.nonAgent"))}}
 
- @govuk_wrapper(appConfig = appConfig,
-  title = title,
+
+@govuk_wrapper(appConfig = appConfig,
+  title = messages("common.pageTitle", title, titleServiceName),
   mainClass = mainClass,
   bodyClasses = bodyClasses,
   sidebar = sidebar,
   contentHeader = contentHeader,
   mainContent = layouts.article(mainContent),
   serviceInfoContent = serviceInfoContent,
-  scriptElem = scriptElem
+  scriptElem = scriptElem,
+  user = user
 )
