--- a/app/views/templates/updateClient.scala.html
+++ b/app/views/templates/updateClient.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2019 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,22 +12,16 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package assets.messages
+@(clientName: Option[String])(implicit messages: Messages)
 
-trait BaseMessages {
-
-  val continue = "Continue"
-  val back = "Back"
-  val confirmAndContinue = "Confirm and continue"
-  val finish = "Finish"
-  val errorHeading = "There is a problem"
-
-  val titleSuffix = " - Business tax account - GOV.UK"
-  val agentTitleSuffix = " - Your client’s VAT details - GOV.UK"
-  val mtdfvTitleSuffix = " - VAT - GOV.UK"
-
-  val problemWithService = "Sorry, there is a problem with the service"
-
-}
+<p>
+  @messages("common.agent.updateClient1")
+  @clientName.fold(
+      <span>{messages("common.agent.yourClient")}</span>
+  )(
+    entityName => <strong class="bold">{entityName}</strong>
+  )
+  @messages("common.agent.updateClient2")
+</p>
