--- a/app/testOnly/views/stubAgentClientUnauth.scala.html
+++ b/app/testOnly/views/stubAgentClientUnauth.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2019 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,19 +12,20 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package testOnly.forms.test
+@import helper.CSRF
+@import testOnly.models.StubAgentClientLookupModel
+@import views.html.templates.inputs.text
 
-import play.api.data.Form
-import play.api.data.Forms._
-import testOnly.models.test.TextInputModel
+@(redirectUrl: String)(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
-object TextInputForm {
+@views.html.main_template(title = "Stub Agent Client Lookup Frontend - Unauthorised", bodyClasses = None, appConfig = appConfig) {
 
-  val form: Form[TextInputModel] = Form(
-    mapping(
-      "text" -> nonEmptyText
-    )(TextInputModel.apply)(TextInputModel.unapply)
-  )
+    <h1>Agent Unauthorised</h1>
+
+    <p><span class="bold-small">RedirectUrl:</span> @redirectUrl</p>
+
+    <a class="button" role="button" id="continue-button" href="@redirectUrl">Redirect</a>
+
 }
