--- a/app/views/returnFrequency/chooseDates.scala.html
+++ b/app/views/returnFrequency/chooseDates.scala.html
@@ -44,7 +44,7 @@
   @*TODO: Update to ChooseDatesController.submit when controller is available*@
   @helpers.form(action = controllers.routes.HelloWorldController.helloWorld()) {
 
-      <div class="form-group" data-metrics="return-frequency:view:change-vat-return-dates;@user.isAgent" id="period-option">
+      <div class="form-group" id="period-option">
           @radioGroup(
               field = form("period-option"),
               choices = Seq(Jan, Feb, Mar, Monthly).filterNot(_ == current).map { option =>
@@ -56,7 +56,6 @@
       </div>
 
       <button
-              onclick="sendGAEvent('return-frequency','continue','change-vat-return-dates', @user.isAgent)"
               class="button"
               type ="submit"
               id="continue">
