--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -29,6 +29,7 @@
   contentHeader: Option[Html] = None,
   mainContent: Html = HtmlFormat.empty,
   serviceInfoContent: Html = HtmlFormat.empty,
+  showSignOut: Boolean = true,
   scriptElem: Option[Html] = None,
   user: Option[User[_]] = None)(implicit request: Request[_], messages: Messages)
 
@@ -42,6 +43,19 @@
       linkElem = Some(linkElem),
       headScripts = None)
     <meta name="format-detection" content="telephone=no" />
+}
+
+@scriptElement = {
+    <script>
+        @if(showSignOut) {
+            window.GOVUK.timeoutDialog({
+              timeout: @appConfig.timeoutPeriod,
+              countdown: @appConfig.timeoutCountDown
+            });
+            var dialogOpen;
+        }
+    </script>
+    @scriptElem.map(x => x)
 }
 
 @headerNavLinks = {}
