--- a/app/views/main_template.scala.html
+++ b/app/views/main_template.scala.html
@@ -24,6 +24,7 @@
         bodyClasses: Option[String] = None,
         mainClass: Option[String] = None,
         scriptElem: Option[Html] = None,
+        showSignOut: Boolean = true,
         user: Option[User[_]] = None)(mainContent: Html)(implicit request: Request[_], messages: Messages)
 
  @import uk.gov.hmrc.play.views.html.layouts
@@ -49,5 +50,6 @@
   mainContent = layouts.article(mainContent),
   serviceInfoContent = serviceInfoContent,
   scriptElem = scriptElem,
+  showSignOut = showSignOut,
   user = user
 )
