corrected the govuk_wrapper and FrontendAppConfig

--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -30,6 +30,7 @@
   mainContent: Html = HtmlFormat.empty,
   serviceInfoContent: Html = HtmlFormat.empty,
   showSignOut: Boolean = true,
+  feedbackOnSignOut: Boolean = true,
   scriptElem: Option[Html] = None,
   user: Option[User[_]] = None)(implicit request: Request[_], messages: Messages)
 
@@ -50,7 +51,9 @@
         @if(showSignOut) {
             window.GOVUK.timeoutDialog({
               timeout: @appConfig.timeoutPeriod,
-              countdown: @appConfig.timeoutCountdown
+              countdown: @appConfig.timeoutCountdown,
+              keepAliveUrl: '@{controllers.routes.ChooseDatesController.redirect().url}',
+              signOutUrl: '@{controllers.routes.SignOutController.SignOut(authorised = false).url}'
             });
             var dialogOpen;
         }
