corrected the govuk_wrapper. Removed the unused val from FrontendAppConfig Added the test

--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -52,8 +52,8 @@
             window.GOVUK.timeoutDialog({
               timeout: @appConfig.timeoutPeriod,
               countdown: @appConfig.timeoutCountdown,
-              keepAliveUrl: '@{controllers.routes.ChooseDatesController.redirect().url}',
-              signOutUrl: '@{controllers.routes.SignOutController.SignOut(authorised = false).url}'
+              keepAliveUrl: '@{controllers.returnFrequency.routes.ChooseDatesController.show()}',
+              signOutUrl: '@{controllers.routes.SignOutController.signOut(feedbackOnSignOut = false)}'
             });
             var dialogOpen;
         }
