--- a/app/views/returnFrequency/confirm_dates.scala.html
+++ b/app/views/returnFrequency/confirm_dates.scala.html
@@ -19,7 +19,7 @@
 @import templates.headings
 @import models.auth.User
 
-@(model: ReturnPeriod)(implicit user : User[_], messages: Messages, appConfig: config.AppConfig)
+@(model: ReturnPeriod, annualAccounting: Boolean)(implicit user : User[_], messages: Messages, appConfig: config.AppConfig)
 
 @views.html.main_template(
   title = messages("confirm_return_frequency.title"),
@@ -31,6 +31,20 @@
 
   @headings(messages("confirm_return_frequency.heading"))
 
+@if(annualAccounting) {
+  <p class="form-group">
+        @messages("confirm_return_frequency_annually.newDates")
+        @messages(s"return_frequency.${model.id}")
+  </p>
+
+  <p>@messages("confirm_return_frequency_annually.p1")</p>
+  <ul class="list list-bullet">
+     <li>@messages("received_frequency.bullet1")</li>
+     <li>@messages("received_frequency.bullet2")</li>
+  </ul>
+}
+else
+{
   <p id="p1"
      class="form-group">
       <strong class="bold">
@@ -38,7 +52,7 @@
       </strong>
       @messages(s"return_frequency.${model.id}")
   </p>
-
+}
   <p class="form-group">
       <a id="change-vat-link"
          href="@controllers.returnFrequency.routes.ChooseDatesController.show().url"
