--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -128,5 +128,5 @@
     Some(uiLayouts.footer_links(
         None,
         None,
-        if(appConfig.features.accessibilityReportFeature()) Some(appConfig.accessibilityReportUrl) else None)),
+        Some(appConfig.accessibilityReportUrl))),
     nav = true)(content)
