--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -100,6 +100,7 @@
     @uiLayouts.serviceInfo(
       betaBanner = HtmlFormat.empty,
       includeGridWrapper = false,
+      includeHMRCBranding = false,
       serviceInfoContent = Some(serviceInfoContent))
 }
 
