--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -117,7 +117,7 @@
 }
 
 @mainContentHeader = {
-      <div class="float--right">@views.html.language_selection(
+      <div class="text--right">@views.html.language_selection(
            appConfig.languageMap,
            appConfig.routeToSwitchLanguage,
            customClass = None
