--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -34,8 +34,8 @@
   user: Option[User[_]] = None)(implicit request: Request[_], messages: Messages)
 
 @linkElem = {
-  <link rel="stylesheet" type="text/css" href='@routes.Assets.at("palette.css")'>
-  <link rel="stylesheet" type="text/css" href='@routes.Assets.at("focus.css")'>
+  <link rel="stylesheet" type="text/css" href='@routes.Assets.at("css/palette.css")'>
+  <link rel="stylesheet" type="text/css" href='@routes.Assets.at("css/focus.css")'>
 }
 
 @head = {
@@ -46,6 +46,7 @@
 }
 
 @scriptElement = {
+    <script type="text/javascript" src=@routes.Assets.at("js/errorFocus.js")></script>
     <script>
         @if(showSignOut) {
             window.GOVUK.timeoutDialog({
