BTAT-7786 Adding feature and content for bulk agent paper update

--- a/app/testOnly/views/featureSwitch.scala.html
+++ b/app/testOnly/views/featureSwitch.scala.html
@@ -35,6 +35,7 @@
                 </legend>
                 @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.stubContactPreferencesFeature), "Stub Contact Preferences")
                 @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.stubAgentClientLookupFeature), "Stub Agent Client Lookup")
+                @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.agentBulkPaperFeature), "Agent Bulk Paper Content")
             </fieldset>
         </div>
 
