--- a/app/views/returnFrequency/change_return_frequency_confirmation.scala.html
+++ b/app/views/returnFrequency/change_return_frequency_confirmation.scala.html
@@ -44,15 +44,24 @@
         @agentEmail match {
 
             case Some(email) => {
+                @if(appConfig.features.agentBulkPaperFeature()) {
+                    <p>@messages("received_frequency.agent.bulkPaper-p1-1")
+                        <strong class="bold">@email</strong>
+                        @messages("received_frequency.agent.bulkPaper-p1-2")</p>
+                @updateClient(clientName)
+            } else {
                 <p>@messages("received_frequency.agent.p1-1")
                     <strong class="bold">@email</strong>
                     @messages("received_frequency.agent.p1-2")</p>
-                @updateClient(clientName)
+                @updateClient(clientName)}
             }
 
             case None => {
-                <p>@messages("common.agent.confirmationLetter")</p>
-                @updateClient(clientName)
+                @if(appConfig.features.agentBulkPaperFeature()) {
+                        @updateClient(clientName)
+                } else {
+                    <p>@messages("common.agent.confirmationLetter")</p>
+                @updateClient(clientName)}
             }
         }
 
@@ -73,4 +82,5 @@
         class="button"
         role="button"
         type="submit">@messages("common.finish")</a>
+
 }
