--- a/app/views/templates/updateClient.scala.html
+++ b/app/views/templates/updateClient.scala.html
@@ -16,12 +16,11 @@
 
 @(clientName: Option[String])(implicit messages: Messages)
 
-<p>
-  @messages("common.agent.updateClient1")
-  @clientName.fold(
-      <span>{messages("common.agent.yourClient")}</span>
-  )(
+<p>@messages("common.agent.updateClient1")
+    @clientName.fold(
+    <span>{messages("common.agent.yourClient")}</span>
+    )(
     entityName => <strong class="bold">{entityName}</strong>
-  )
-  @messages("common.agent.updateClient2")
+    )
+    @messages("common.agent.updateClient2")
 </p>
