--- a/app/testOnly/views/featureSwitch.scala.html
+++ b/app/testOnly/views/featureSwitch.scala.html
@@ -17,28 +17,28 @@
 @import config.ConfigKeys
 @import helper.CSRF
 @import testOnly.models._
-@import testOnly.forms.FeatureSwitchForm
 
 @(form: Form[FeatureSwitchModel])(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
-@views.html.main_template(title = messages("featureSwitch.title"), bodyClasses = None, appConfig = appConfig) {
+@views.html.main_template(title = messages("featureSwitch.title"), appConfig = appConfig) {
 
-    @helper.form(action = testOnly.controllers.routes.FeatureSwitchController.submitFeatureSwitch) {
-        @CSRF.formField
+  @helper.form(action = testOnly.controllers.routes.FeatureSwitchController.submitFeatureSwitch) {
+    @CSRF.formField
 
-        <div class="form-group" style="border-radius: 25px;
-            background: #C9EDD9;
-            padding: 25px;">
-            <fieldset>
-                <legend>
-                    <p class="bold-medium" style="margin-bottom: 10px;">VAT Return Period Frontend Features</p>
-                </legend>
-                @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.stubContactPreferencesFeature), "Stub Contact Preferences")
-                @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.stubAgentClientLookupFeature), "Stub Agent Client Lookup")
-                @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.agentBulkPaperFeature), "Agent Bulk Paper Content")
-            </fieldset>
-        </div>
+    <div class="form-group" style="border-radius: 25px;
+        background: #C9EDD9;
+        padding: 25px;">
+      <fieldset>
+        <legend>
+            <p class="bold-medium" style="margin-bottom: 10px;">VAT Return Period Frontend Features</p>
+        </legend>
+        @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.stubContactPreferencesFeature), "Stub Contact Preferences")
+        @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.stubAgentClientLookupFeature), "Stub Agent Client Lookup")
+        @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.agentBulkPaperFeature), "Agent Bulk Paper Content")
+        @views.html.templates.inputs.singleCheckbox(form(ConfigKeys.contactPrefMigrationFeature), "Retrieve contact pref from vat-subscription")
+      </fieldset>
+    </div>
 
-        <button class="button" type="submit" id="continue-button">@messages("featureSwitch.submit")</button>
-    }
+    <button class="button" type="submit" id="continue-button">@messages("featureSwitch.submit")</button>
+  }
 }
