[BTAT-8048] amended change link hidden text

--- a/app/views/returnFrequency/confirm_dates.scala.html
+++ b/app/views/returnFrequency/confirm_dates.scala.html
@@ -48,7 +48,7 @@ user = Some(user)) {
 
             <dd class="cya-change">
                 <a href="@controllers.returnFrequency.routes.ChooseDatesController.show().url"
-                   aria-label=@messages("confirm_return_frequency.changeLink")>
+                   aria-label='@messages("confirm_return_frequency.changeLink")'>
                     @messages("checkYourAnswers.change")
                 </a>
             </dd>
