--- a/app/views/templates/headings.scala.html
+++ b/app/views/templates/headings.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@(heading: String)(implicit messages: Messages)
+@(heading: String)
 
 <header>
     <h1 id="page-heading" class="heading-large">@heading</h1>
