--- a/app/testOnly/views/StubAgentClientUnauth.scala.html
+++ b/app/testOnly/views/StubAgentClientUnauth.scala.html
@@ -14,15 +14,18 @@
  * limitations under the License.
  *@
 
- @import config.AppConfig
-@(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@import views.html.MainTemplate
 
- @contentHeader = {
-  <h1>@messages(heading)</h1>
+@this(mainTemplate: MainTemplate)
+
+@(redirectUrl: String)(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
+
+@mainTemplate(title = "Stub Agent Client Lookup Frontend - Unauthorised", bodyClasses = None, appConfig = appConfig) {
+
+    <h1>Agent Unauthorised</h1>
+
+    <p><span class="bold-small">RedirectUrl:</span> @redirectUrl</p>
+
+    <a class="button" role="button" id="continue-button" href="@redirectUrl">Redirect</a>
+
 }
-
- @mainContent = {
-  <p>@messages(message)</p>
-}
-
- @govuk_wrapper(appConfig = appConfig, title = messages(pageTitle), contentHeader = Some(contentHeader), mainContent = mainContent)
