--- a/app/views/annualAccounting/PreventLeaveAnnualAccounting.scala.html
+++ b/app/views/annualAccounting/PreventLeaveAnnualAccounting.scala.html
@@ -14,19 +14,23 @@
  * limitations under the License.
  *@
 
+@import templates.headings
 @import models.auth.User
+@import views.html.MainTemplate
 
-@()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig, user: Option[User[_]] = None)
+@this(mainTemplate: MainTemplate)
 
-@views.html.main_template(title = messages("unauthorised_non_agent.title"), bodyClasses = None, appConfig = appConfig) {
+@()(implicit user : User[_], messages: Messages, appConfig: config.AppConfig)
 
-    <h1>@messages("unauthorised_non_agent.heading")</h1>
+@mainTemplate(
+  title = messages("preventLeavingAnnualAccounting.h1"),
+  bodyClasses = None,
+  appConfig = appConfig,
+  user = Some(user)) {
 
-    <p>@messages("unauthorised_non_agent.text")
-        <a href="@appConfig.govUkGuidanceMtdVat">@messages("unauthorised_non_agent.link")</a>@messages("common.fullStop")
-    </p>
+  <a class="link-back" href="@appConfig.manageVatUrl">@messages("base.back")</a>
 
-    <a class="button" role="button" href="@controllers.routes.SignOutController.signOut(feedbackOnSignOut = false)">
-        @messages("common.signOut")
-    </a>
+  @headings(messages("preventLeavingAnnualAccounting.h1"))
+  <p>@messages("preventLeavingAnnualAccounting.p1")</p>
+  <p>@messages("preventLeavingAnnualAccounting.p2")</p>
 }
