--- a/app/views/errors/UnauthorisedAgent.scala.html
+++ b/app/views/errors/UnauthorisedAgent.scala.html
@@ -14,11 +14,13 @@
  * limitations under the License.
  *@
 
-@import models.auth.User
+@import views.html.MainTemplate
 
-@()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig, user: Option[User[_]] = None)
+@this(mainTemplate: MainTemplate)
 
-@views.html.main_template(title = messages("unauthorised_agent.title"), bodyClasses = None, appConfig = appConfig) {
+@()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
+
+@mainTemplate(title = messages("unauthorised_agent.title"), bodyClasses = None, appConfig = appConfig) {
 
     <h1>@messages("unauthorised_agent.title")</h1>
 
