--- a/app/views/templates/UpdateClient.scala.html
+++ b/app/views/templates/UpdateClient.scala.html
@@ -14,14 +14,15 @@
  * limitations under the License.
  *@
 
-@(redirectUrl: String)(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
+@this()
 
-@views.html.main_template(title = "Stub Agent Client Lookup Frontend - Unauthorised", bodyClasses = None, appConfig = appConfig) {
+@(clientName: Option[String])(implicit messages: Messages)
 
-    <h1>Agent Unauthorised</h1>
-
-    <p><span class="bold-small">RedirectUrl:</span> @redirectUrl</p>
-
-    <a class="button" role="button" id="continue-button" href="@redirectUrl">Redirect</a>
-
-}
+<p>@messages("common.agent.updateClient1")
+    @clientName.fold(
+    <span>{messages("common.agent.yourClient")}</span>
+    )(
+    entityName => <strong class="bold">{entityName}</strong>
+    )
+    @messages("common.agent.updateClient2")
+</p>
