--- a/app/views/templates/inputs/SingleCheckbox.scala.html
+++ b/app/views/templates/inputs/SingleCheckbox.scala.html
@@ -14,20 +14,14 @@
  * limitations under the License.
  *@
 
-@import templates.headings
-@import models.auth.User
+@this()
 
-@()(implicit user : User[_], messages: Messages, appConfig: config.AppConfig)
+@(field: Field, label: String)(implicit messages: Messages)
 
-@views.html.main_template(
-  title = messages("preventLeavingAnnualAccounting.h1"),
-  bodyClasses = None,
-  appConfig = appConfig,
-  user = Some(user)) {
+@value = @{ field.value match { case Some(x) => x case None => "false" case x => x }}
 
-  <a class="link-back" href="@appConfig.manageVatUrl">@messages("base.back")</a>
+<div class="multiple-choice">
+    <input id="@{field.name}" name="@{field.name}" type="checkbox" value="true" @if(value == "true"){ checked }>
+    <label for="@{field.name}">@label</label>
+</div>
 
-  @headings(messages("preventLeavingAnnualAccounting.h1"))
-  <p>@messages("preventLeavingAnnualAccounting.p1")</p>
-  <p>@messages("preventLeavingAnnualAccounting.p2")</p>
-}
