--- a/app/testOnly/views/StubAgentClientUnauth.scala.html
+++ b/app/testOnly/views/StubAgentClientUnauth.scala.html
@@ -18,7 +18,7 @@
 
 @this(mainTemplate: MainTemplate)
 
-@(redirectUrl: String)(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
+@(redirectUrl: String)(implicit messages: Messages, appConfig: config.AppConfig)
 
 @mainTemplate(title = "Stub Agent Client Lookup Frontend - Unauthorised", bodyClasses = None, appConfig = appConfig) {
 
