--- a/app/views/errors/UnauthorisedAgent.scala.html
+++ b/app/views/errors/UnauthorisedAgent.scala.html
@@ -18,7 +18,7 @@
 
 @this(mainTemplate: MainTemplate)
 
-@()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
+@()(implicit messages: Messages, appConfig: config.AppConfig)
 
 @mainTemplate(title = messages("unauthorised_agent.title"), bodyClasses = None, appConfig = appConfig) {
 
