[BTAT-7901] - back to client link

--- a/app/views/returnFrequency/ChangeReturnFrequencyConfirmation.scala.html
+++ b/app/views/returnFrequency/ChangeReturnFrequencyConfirmation.scala.html
@@ -27,7 +27,7 @@
         <p id="change-client-text">
             <a id="change-client-link"
             href="@controllers.routes.ChangeClientController.changeClient()">
-            @messages("common.agent.changeClient")</a>
+            @messages("common.agent.backToClient")</a>
         </p>
 }
 
